--- a/helloworld.html
+++ b/helloworld.html
@@ -12,22 +12,36 @@
             text-align: center;
             margin: 60px;
         }
-
+ 
         h1 {
-            color: #666;
+            color: #9199;
         }
 
         p {
             color: #888;
         }
-    </style>
-</head>
 
+        input[type="checkbox"] {
+            margin-right: 5px;
+        }
+
+        label {
+            color: #555;
+        }
+    </style>
 </head>
 
 <body>
     <h1>Hello World!</h1>
     <p>I'm back with learning Frontend!</p>
+
+    <input type="checkbox" id="checkbox1" name="checkbox1">
+    <label for="checkbox1">Option 1</label>
+
+    <br>
+
+    <input type="checkbox" id="checkbox2" name="checkbox2">
+    <label for="checkbox2">Option 2</label>
 </body>
 
 </html>
