--- a/helloworld.html
+++ b/helloworld.html
@@ -47,6 +47,8 @@
     <h1>Hello World!</h1>
     <p>I'm back with learning Frontend!</p>
 
+    <img src="https://media.istockphoto.com/id/605773252/pl/wektor/rosn%C4%85cy-wykres-s%C5%82upkowy.jpg?s=612x612&w=0&k=20&c=2TACCnPYQBjygZv83zhcTUgWUEdwDitlYqZJ1DIVESs=" alt="Growing Bar Chart">
+    
     <input type="checkbox" id="checkbox1" name="checkbox1">
     <label for="checkbox1">Option 1</label>
 
