--- a/helloworld.html
+++ b/helloworld.html
@@ -16,6 +16,11 @@
  
         h1 {
             color: #1e90ff;
+            transition: color 0.5s ease;
+        }
+
+        h1:hover {
+            color: #ff6347;
         }
 
         p {
@@ -25,15 +30,16 @@
 
         input[type="checkbox"] {
             margin-right: 5px;
+            border: 2px solid #4b0082;
+            background-color: #fff;
+            padding: 5px;
+            border-radius: 5px;
+            cursor: pointer;
         }
 
         label {
             color: #4b0082;
             font-weight: bold;
-        }
-
-        input[type="checkbox"] {
-            box-shadow: 0 0 5px #888;
         }
 
         input[type="checkbox"]:checked + label {
