--- a/helloworld.html
+++ b/helloworld.html
@@ -17,6 +17,7 @@
         h1 {
             color: #1e90ff;
             transition: color 0.5s ease;
+            text-shadow: 2px 2px 4px #888;
         }
 
         h1:hover {
